--- a/templates/deafEduv2.html
+++ b/templates/deafEduv2.html
@@ -74,7 +74,7 @@ referrerpolicy="no-referrer"
       </nav>
     </header>
 
-        <!-- Main Article -->
+         <!-- Main Article -->
          <main>
             <div class="container mt-5 fade-in">
                 <div class="row">
@@ -87,58 +87,99 @@ referrerpolicy="no-referrer"
                                     <img src="{{ url_for('static', filename='assets/deaf.svg') }}" alt="Gambar Artikel Utama" class="icon-inline fade-in">
                                 </div>
                                 <p class="article-text fade-in">Tuli adalah sebuah gangguan pendengaran yang menyebabkan seseorang tidak memiliki kemampuan untuk mendengar secara menyeluruh atau sebagian. Kondisi ini tentunya dapat dipengaruhi oleh beberapa faktor, salah satunya adalah genetika.</p>
-                            <div class="article-content fade-in">
-                                <p>Tuli adalah gangguan pendengaran yang menyebabkan seseorang tidak mampu mendengar sepenuhnya atau sebagian. Menurut WHO, seseorang dengan ambang pendengaran 20 dB pada kedua telinga mengalami gangguan pendengaran, sedangkan orang tuli mengalami gangguan lebih parah dan menggunakan bahasa isyarat untuk berkomunikasi.</p>
-                                <p>Hak Penyandang Disabilitas di Indonesia: Indonesia menjunjung tinggi Hak Asasi Manusia (HAM) dan menjamin hak-hak penyandang disabilitas, termasuk hak mendapatkan informasi. Di Pekanbaru, banyak stasiun televisi yang tidak memperhatikan hak-hak penyandang disabilitas, terutama tuli, dalam menggunakan bahasa isyarat. Pasal 28 F UUD 1945 melindungi HAM warga negara【Universitas-Riau, 2023】. Menteri Sosial Juliari P. Batubara menekankan perlakuan adil bagi penyandang disabilitas, yang berjumlah sekitar 22,5 juta di Indonesia, dengan 2,5 juta mengalami gangguan pendengaran【BPS, 2020】.</p>
-                                <p>Definisi Medis dan Penyebab: Tuli berasal dari kata "tuna" (kurang) dan "rungu" (pendengaran), yang mengakibatkan kesulitan komunikasi. Penyebabnya termasuk faktor genetik, infeksi saluran telinga, paparan suara bising, cedera, dan usia lanjut.</p>
+                                <div class="article-content article-1-content fade-in">
+                                    <p>Tuli adalah gangguan pendengaran yang menyebabkan seseorang tidak mampu mendengar sepenuhnya atau sebagian. Menurut WHO, seseorang dengan ambang pendengaran 20 dB pada kedua telinga mengalami gangguan pendengaran, sedangkan orang tuli mengalami gangguan lebih parah dan menggunakan kosa isyarat untuk berkomunikasi.</p>
+                                    <p>Hak Penyandang Disabilitas di Indonesia: Indonesia menjunjung tinggi Hak Asasi Manusia (HAM) dan menjamin hak-hak penyandang disabilitas, termasuk hak mendapatkan informasi. Di Pekanbaru, banyak stasiun televisi yang tidak memperhatikan hak-hak penyandang disabilitas, terutama tuli, dalam menggunakan kosa isyarat. Pasal 28 F UUD 1945 melindungi HAM warga negara【Universitas-Riau, 2023】. Menteri Sosial Juliari P. Batubara menekankan perlakuan adil bagi penyandang disabilitas, yang berjumlah sekitar 22,5 juta di Indonesia, dengan 2,5 juta mengalami gangguan pendengaran【BPS, 2020】.</p>
+                                    <p>Definisi Medis dan Penyebab: Tuli berasal dari kata "tuna" (kurang) dan "rungu" (pendengaran), yang mengakibatkan kesulitan komunikasi. Penyebabnya termasuk faktor genetik, infeksi saluran telinga, paparan suara bising, cedera, dan usia lanjut.</p>
+                                </div>
+                                <a href="#" class="btn btn-primary read-more-btn" data-target="article-1-content">
+                                    <span class="read-more-text">Baca Lebih Lanjut</span>
+                                    <img src="{{ url_for('static', filename='assets/down-arrow.png') }}" style="width: 30px;" alt="Down Arrow" class="read-more-icon">
+                                </a>
                             </div>
-                            <a href="#" class="btn btn-primary read-more-btn">
-                                <span class="read-more-text">Baca Lebih Lanjut</span>
-                                <img src="{{ url_for('static', filename='assets/arrow2.svg') }}" style="width: 30px;" alt="Down Arrow" class="read-more-icon">
-                              </a>
                         </div>
+                        <!-- Artikel Kedua Dimulai di Sini -->
+                        <div class="card fade-in mt-4">
+                            <div class="card-body fade-in">
+                                <div class="title-icon-container fade-in">
+                                    <h2 class="fade-in">Cara Berkomunikasi dengan Orang Tuli</h2>
+                                    <img src="{{ url_for('static', filename='assets/talk.svg') }}" alt="Gambar Artikel Utama" class="icon-inline fade-in">
+                                </div>
+                                <p class="article-text fade-in">Berkomunikasi dengan orang tuli memerlukan pengetahuan dan pemahaman tentang kosa isyarat dan budaya tuli. Ini penting untuk memastikan komunikasi yang efektif dan inklusif.</p>
+                                <div class="article-content article-2-content fade-in">
+                                    <p>kosa Isyarat: kosa isyarat adalah metode komunikasi utama bagi banyak orang tuli. Ini melibatkan gerakan tangan, ekspresi wajah, dan gerakan tubuh untuk menyampaikan pesan. Setiap negara memiliki kosa isyaratnya sendiri, seperti Bisindo di Indonesia.</p>
+                                    <p>Kultural Sensitivitas: Memahami budaya tuli sangat penting dalam berkomunikasi. Ini mencakup penghargaan terhadap identitas dan cara hidup orang tuli. Misalnya, selalu berdiri di depan orang tuli saat berbicara dan menggunakan cahaya yang cukup.</p>
+                                    <p>Teknologi Pendukung: Ada banyak alat teknologi yang dapat membantu komunikasi, seperti teks real-time, aplikasi terjemahan kosa isyarat, dan alat bantu dengar. Memanfaatkan teknologi ini dapat meningkatkan komunikasi secara signifikan.</p>
+                                </div>
+                                <a href="#" class="btn btn-primary read-more-btn" data-target="article-2-content">
+                                    <span class="read-more-text">Baca Lebih Lanjut</span>
+                                    <img src="{{ url_for('static', filename='assets/down-arrow.png') }}" style="width: 30px;" alt="Down Arrow" class="read-more-icon">
+                                </a>
+                            </div>
+                        </div>
+                        <!-- Artikel Kedua Berakhir di Sini -->
+                        <!-- Artikel Ketiga Dimulai di Sini -->
+                        <div class="card fade-in-on-scroll mt-4">
+                            <div class="card-body fade-in-on-scroll">
+                                <div class="title-icon-container fade-in-on-scroll">
+                                    <h2 class="fade-in">Jenis-Jenis Tuli</h2>
+                                    <img src="{{ url_for('static', filename='assets/jenis.jpg') }}" alt="Gambar Artikel Utama" class="icon-inline fade-in">
+                                </div>
+                                <p class="article-text fade-in">Tuli dapat dikategorikan ke dalam beberapa jenis berdasarkan tingkat keparahan dan penyebabnya. Mengetahui jenis-jenis tuli dapat membantu dalam penanganan dan perawatan yang tepat.</p>
+                                <div class="article-content article-3-content fade-in-on-scroll">
+                                    <p>Tuli Konduktif: Tuli ini terjadi ketika ada masalah di bagian telinga luar atau tengah yang menghalangi suara untuk sampai ke telinga dalam. Penyebabnya bisa termasuk infeksi telinga, penumpukan kotoran telinga, atau kerusakan pada tulang pendengaran.</p>
+                                    <p>Tuli Sensorineural: Jenis tuli ini disebabkan oleh kerusakan pada telinga dalam atau saraf pendengaran. Penyebab umum termasuk penuaan, paparan suara bising, dan kondisi genetik. Tuli sensorineural biasanya permanen.</p>
+                                    <p>Tuli Campuran: Ini adalah kombinasi dari tuli konduktif dan sensorineural. Misalnya, seseorang bisa memiliki masalah di telinga tengah serta kerusakan pada telinga dalam.</p>
+                                    <p>Tuli Sementara: Tuli ini bersifat sementara dan dapat pulih dengan sendirinya atau dengan pengobatan. Penyebabnya termasuk infeksi telinga atau paparan suara keras dalam jangka pendek.</p>
+                                    <p>Tuli Mendadak: Tuli yang terjadi secara tiba-tiba dan tanpa peringatan. Penyebabnya bisa termasuk trauma kepala, infeksi virus, atau masalah sirkulasi darah ke telinga dalam. Penanganan medis segera diperlukan.</p>
+                                </div>
+                                <a href="#" class="btn btn-primary read-more-btn" data-target="article-3-content">
+                                    <span class="read-more-text">Baca Lebih Lanjut</span>
+                                    <img src="{{ url_for('static', filename='assets/down-arrow.png') }}" style="width: 30px;" alt="Down Arrow" class="read-more-icon">
+                                </a>
+                            </div>
+                        </div>
+                        <!-- Artikel Ketiga Berakhir di Sini -->
                     </div>
                 </div>
             </div>
             
+            
   
 
-        <!-- Video Section -->
-        <div class="video-section mt-5 fade-in-on-scroll">
-            <h1>Video Edukasi</h1>
-            <div class="video-container fade-in-on-scroll">
-                <div class="video-wrapper fade-in-on-scroll">
-                    <video controls class="video-player fade-in-on-scroll">
-                        <source src="{{ url_for('static', filename='assets/videoEdukasi.mp4') }}" type="video/mp4">
-                    </video>
-                    <div class="video-details fade-in-on-scroll">
-                        <h3>Apa itu tuli ?</h3>
-                        <p>Edukasi Dasar Mengenai Tuli</p>
-                        <a href="https://youtu.be/qA2u6HtCWug?si=-0an3V0yg1uDuPe_"><p>Sumber video : youtube.com/@pastoraldifabelkeuskupansu5697</p></a>
+            <div class="video-section mt-5 fade-in-on-scroll">
+                <h1>Video Edukasi</h1>
+                <div class="video-container fade-in-on-scroll">
+                    <div class="video-wrapper fade-in-on-scroll">
+                        <video controls class="video-player fade-in-on-scroll">
+                            <source src="{{ url_for('static', filename='assets/tuli.mp4') }}" type="video/mp4">
+                        </video>
+                        <div class="video-details fade-in-on-scroll">
+                            <h3>Apa itu tuli ?</h3>
+                            <p>Edukasi Dasar Mengenai Tuli</p>
+                        </div>
                     </div>
-                </div>
-                <div class="video-wrapper fade-in-on-scroll">
-                    <video controls class="video-player fade-in-on-scroll">
-                        <source src="video2.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                    <div class="video-details fade-in-on-scroll">
-                        <h3>Video 2 Title</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel velit in magna tempor tincidunt.</p>
+                    <div class="video-wrapper fade-in-on-scroll">
+                        <video controls class="video-player fade-in-on-scroll">
+                            <source src="{{ url_for('static', filename='assets/jenis.mp4') }}" type="video/mp4">
+                        </video>
+                        <div class="video-details fade-in-on-scroll">
+                            <h3>Jenis-jenis Tuli</h3>
+                            <p>Mengenal jenis-jenis Tuli</p>
+                        </div>
                     </div>
-                </div>
-                <div class="video-wrapper fade-in-on-scroll">
-                    <video controls class="video-player fade-in-on-scroll">
-                        <source src="video3.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                    <div class="video-details fade-in-on-scroll">
-                        <h3>Video 3 Title</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel velit in magna tempor tincidunt.</p>
+                    <div class="video-wrapper fade-in-on-scroll">
+                        <video controls class="video-player fade-in-on-scroll">
+                            <source src="{{ url_for('static', filename='assets/komunikasi.mp4') }}" type="video/mp4">
+                        </video>
+                        </video>
+                        <div class="video-details fade-in-on-scroll">
+                            <h3>Cara berkomunikasi dengan orang Tuli</h3>
+                            <p>Menjelaskan bagaimana cara berkomunikasi dengan orang Tuli</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
     </main>
 
     <footer class="footer" id="about">
