--- a/templates/faq.html
+++ b/templates/faq.html
@@ -66,7 +66,7 @@
                 <div class="faq-item fade-in">
                     <img src="{{ url_for('static', filename='assets/logoTeks.svg') }}" alt="FAQ Icon" class="faq-icon">
                     <h3>Apa itu BercakApp?</h3>
-                    <p>BercakApp adalah platform yang dirancang untuk membantu Anda berkomunikasi dan belajar bahasa isyarat</p>
+                    <p>BercakApp adalah platform yang dirancang untuk membantu Anda berkomunikasi dan belajar kosa isyarat</p>
                     <a href="email" class="btn btn-primary mt-2"><i class="fas fa-envelope"></i>Hubungi Kami</a>
                 </div>
                 <div class="faq-item fade-in">
@@ -83,23 +83,27 @@
                 </div>
                 <div class="faq-item  fade-in">
                     <img src="{{ url_for('static', filename='assets/logoTeks.svg') }}" alt="FAQ Icon" class="faq-icon">
-                    <h3>Pertanyaan?</h3>
-                    <p>Jawaban singkat</p>
+                    <h3>Siapa yang dapat menggunakan Bercak.App?</h3>
+                    <p>Bercak.App dapat digunakan oleh siapa saja yang ingin belajar dan meningkatkan keterampilan dalam kosa isyarat dan pengenalan ucapan</p>
                     <a href="email" class="btn btn-primary mt-2"><i class="fas fa-envelope"></i>Hubungi Kami</a>
                 </div>
                 <div class="faq-item  fade-in">
                     <img src="{{ url_for('static', filename='assets/logoTeks.svg') }}" alt="FAQ Icon" class="faq-icon">
-                    <h3>Pertanyaan?</h3>
-                    <p>Jawaban singkat</p>
+                    <h3>Apa saja fitur yang tersedia di Bercak.App?</h3>
+                    <p>Terdapat 4 fitur utama yaitu
+                        <li>Deaf Education: Fitur edukasi tentang tuli.</li>
+                        <li>Sign Recognition: Deteksi kosa isyarat menjadi teks.</li>
+                        <li>Speech Recognition: Deteksi suara menjadi teks.</li>
+                        <li>Quiz Bisindo: Kuis Bahasa Isyarat Indonesia (Bisindo).</li>
+                    </p>
                     <a href="email" class="btn btn-primary mt-2"><i class="fas fa-envelope"></i>Hubungi Kami</a>
                 </div>
                 <div class="faq-item  fade-in">
                     <img src="{{ url_for('static', filename='assets/logoTeks.svg') }}" alt="FAQ Icon" class="faq-icon">
-                    <h3>Pertanyaan?</h3>
-                    <p>Jawaban singkat</p>
+                    <h3>Bagaimana cara mendapatkan bantuan jika mengalami masalah dengan Bercak.App?</h3>
+                    <p>Jika Anda mengalami masalah atau memiliki pertanyaan lebih lanjut, Anda dapat menghubungi tim dukungan kami melalui email di [email dukungan] atau melalui fitur bantuan dalam aplikasi.</p>
                     <a href="email" class="btn btn-primary mt-2"><i class="fas fa-envelope"></i>Hubungi Kami</a>
                 </div>
-                
             </div>
         </section>
     </main>
